--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body onload="initGame()">
+        <script src="chs.js"></script>
+        <script src="core.js"></script>
         <div class="w3-row">
             <div style="height:100%" class="w3-col m3 l2 w3-gray">
                 <h3>Menu:</h3>
@@ -83,5 +85,21 @@
                 </div>    
             </div>
         </div>
+<!--客服 开始-->
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>    </div>
     </body>
 </html>
